# Gadgetron

./: CMakeLists.txt  README.md  ReceiveSAECDataGadget.py  ReorderSlicesGadget.cpp  ReorderSlicesGadget.h  SaveKspaceData.cpp  SaveKspaceData.h  gadgetron_iadi_export.h
config/: config_saec.xml
